--- a/app/src/main/res/drawable/rounded_black_textbox.xml
+++ b/app/src/main/res/drawable/rounded_black_textbox.xml
@@ -5,5 +5,6 @@
     <corners android:radius="5dp"/>
     <stroke
         android:width="1dp"
-        android:color="@android:color/holo_red_dark" />
+        android:color="@color/black" />
+    <solid android:color="@color/black" />
 </shape>
