--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -7,4 +7,7 @@
         android:bottomRightRadius="10dp"
         android:topLeftRadius="10dp"
         android:bottomLeftRadius="10dp" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/black" />
 </shape>
