--- a/app/src/main/res/layout/activity_view_cart.xml
+++ b/app/src/main/res/layout/activity_view_cart.xml
@@ -14,19 +14,31 @@
 
         <TextView
             android:id="@+id/cartView"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:text="Cart:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:padding="10dp"
             android:layout_marginBottom="20dp"
+            android:textAlignment="center"
+            android:padding="10dp"
+            android:text="Cart:"
             android:textColor="@color/black" />
+
+        <ListView
+            android:id="@+id/cartListView"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_below="@+id/cartView"
+            android:layout_marginBottom="25dp"
+            android:dividerHeight="10.0sp"
+            android:divider="@color/white"
+            android:clickable="true"
+            android:layout_centerHorizontal="true" />
 
         <TextView
             android:id="@+id/priceOfCartTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cartView"
+            android:layout_below="@id/cartListView"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="25dp"
             android:text="Price:"
@@ -39,7 +51,7 @@
             android:layout_height="40dp"
             android:layout_below="@id/priceOfCartTextView"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="74dp"
+            android:layout_marginBottom="10dp"
             android:background="@color/black"
             android:padding="5dp"
             android:text="Place Order"
