--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="purple">#800080</color>
+    <color name="red">#FF0000</color>
+    <color name="fadedRed">#60FF0000</color>
 </resources>
