- Cart successfully adds, removes, and sets quantities for items a user adds  - Only issue is that cart resets on login and that user cannot add other flavors to items  - Working on the abovementioned issues next

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,12 @@
     <color name="colorBasicFull">#E6F8F7F7</color>
     <color name="colorRose">#EFE5DE</color>
     <color name="black">#000000</color>
+    <color name="fadedBlack">#60000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="fadedWhite">#60FFFFFF</color>
     <color name="purple">#800080</color>
     <color name="red">#FF0000</color>
     <color name="fadedRed">#60FF0000</color>
+    <color name="blue">#0080FF</color>
+    <color name="fadedBlue">#600080FF</color>
 </resources>
