--- a/app/src/main/res/layout/cart_list.xml
+++ b/app/src/main/res/layout/cart_list.xml
@@ -20,19 +20,19 @@
         android:textColor="@android:color/holo_green_dark"
         android:textSize="12sp" />
 
-    <EditText
+    <Spinner
         android:id="@+id/quantityOfItemInCart"
         android:layout_width="50dp"
         android:layout_height="25dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/itemNameInCart"
-        android:background="@drawable/rounded_blue_button"
+        android:background="@drawable/rounded_black_outline"
         android:ems="10"
-        android:inputType="number"
         android:padding="2dp"
         android:text="#"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_blue_dark"
+        android:entries="@array/quantities"
+        android:textColor="@color/blue"
         android:layout_alignParentLeft="true" />
 
     <Button
@@ -40,7 +40,8 @@
         android:layout_width="51dp"
         android:layout_height="25dp"
         android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/quantityOfItemInCart"
+        android:layout_below="@id/itemNameInCart"
+        android:layout_alignTop="@+id/priceOfCartTextView"
         android:background="@drawable/rounded_red_outline"
         android:text="X"
         android:textColor="@android:color/holo_red_dark"
@@ -52,10 +53,10 @@
         android:layout_height="25dp"
         android:layout_below="@id/itemNameInCart"
         android:layout_centerInParent="true"
-        android:background="@drawable/rounded_black_outline"
+        android:background="@drawable/rounded_blue_button"
         android:padding="5dp"
         android:text="@string/price"
-        android:textColor="@color/black"
+        android:textColor="@color/blue"
         android:textSize="12sp" />
 
 </RelativeLayout>
