- Fixed app crash on pay order

--- a/app/src/main/res/layout/activity_select_size_slushie_smoothie.xml
+++ b/app/src/main/res/layout/activity_select_size_slushie_smoothie.xml
@@ -14,14 +14,27 @@
         android:layout_height="match_parent" >
 
         <TextView
+            android:id="@+id/selectFlavorsView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="11dp"
+            android:layout_marginBottom="10dp"
+            android:text="SELECT ADDITIONAL FLAVORS:"
+            android:textColor="@color/black"
+            android:textSize="24sp" />
+
+        <TextView
             android:id="@+id/selectTypeSlushieSmoothieTextView"
             android:layout_width="282dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:textAlignment="center"
+            android:layout_below="@+id/selectFlavorsView"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="?android:attr/actionBarSize"
             android:text="SELECT SIZE:"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="40dp"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="30sp" />
 
@@ -29,10 +42,9 @@
             android:id="@+id/smoothie_price_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/selectTypeSlushieSmoothieTextView"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="114dp"
+            android:layout_below="@+id/selectTypeSlushieSmoothieTextView"
+            android:layout_marginTop="-20dp"
             android:text="Smoothies"
             android:textColor="@color/black"
             android:textSize="24sp"
@@ -44,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/selectTypeSlushieSmoothieTextView"
             android:layout_alignTop="@+id/smoothie_price_textview"
+            android:layout_below="@id/selectTypeSlushieSmoothieTextView"
             android:layout_marginBottom="10dp"
             android:text="Slushies"
             android:textColor="@color/black"
