--- a/app/src/main/res/layout/cart_list.xml
+++ b/app/src/main/res/layout/cart_list.xml
@@ -8,14 +8,17 @@
     <TextView
         android:id="@+id/itemNameInCart"
         android:layout_width="match_parent"
-        android:layout_height="25dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/rounded_green_outline"
         android:gravity="center"
-        android:padding="2dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:text="Name of Item"
-        android:layout_marginBottom="5dp"
         android:textAlignment="center"
         android:textColor="@android:color/holo_green_dark"
         android:textSize="12sp" />
